# cmake-tutorials

project1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
project2/: CMakeLists.txt
